--- a/template.env
+++ b/template.env
@@ -1,2 +1,2 @@
-REACT_APP_WEBSOCKET_PORT=5678
-REACT_APP_WEBSOCKET_HOST=tetris.stacksmashing.yt
+REACT_APP_WEBSOCKET_PORT=443
+REACT_APP_WEBSOCKET_HOST=tetrisserver.gblink.io
